--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -158,7 +158,7 @@
                 <h3 class="panel-title">Current Auctions 
                     <button class="btn btn-info btn-xs pull-right" 
                             data-toggle="collapse" 
-                            data-target="#open-auctions-view">display
+                            data-target="#open-auctions-view">toggle
                     </button>
                 </h3>
             </div>
