--- a/views/humidors.jade
+++ b/views/humidors.jade
@@ -2,6 +2,13 @@ extends layout.jade
 
 block content
 	h1= user.name + '\'s Humidors'
-	div.list-group
-		each val, index in humidors
-			a(href='/humidors/' + val.id).list-group-item= val.name
+	each humidor, index in humidors
+		.panel.panel-info
+			.panel-heading
+				a(href='/humidors/info/' + humidor._id).panel-title= humidor.name
+					span /
+					small= humidor.location
+			.panel-body
+				p Stats and stuff will eventually go here
+
+	a(href='/humidors/info/new').btn.btn-default New Humidor
