--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,21 +7,28 @@ html
 		link(rel='stylesheet', href='/static/css/style.css')
 		script(src='/socket.io/socket.io.js')
 	body
-		div.navbar.navbar-default.navbar-fixed-top
-			div.container
-				div.navbar.header
-					button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
+		.navbar.navbar-default.navbar-fixed-top
+			.container
+				.navbar-header
+					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar-main')
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-					a.navbar-brand(href='/')
-						img(src='/static/img/logo_header.png', alt='Herf.IO')
-				div.#navbar-main.navbar-collapse.collapse
+					a(href='/').navbar-brand Herf.IO
+				#navbar-main.navbar-collapse.collapse
 					ul.nav.navbar-nav
 						li
 							a(href='/bids') BidHistory
 						li
-							a(href='/humidors') HumiTrack
+							a(href='/humidors/list') HumiTrack
+					ul.nav.navbar-nav.pull-right
+						if !user
+							li
+								a(href='/login') Login
+						else
+							li
+								a(href='/logout') Logout
+							li#username= user.name
 		div#wrapper.container
 			block content
 	script(src='/static/js/jQuery-1.10.2.min.js')
