--- a/views/bidhistory.jade
+++ b/views/bidhistory.jade
@@ -2,103 +2,153 @@ extends layout.jade
 
 block content
 	.well
-		form(method='post', action='/bids/search')
+		form#searchForm
 			.input-group
 				input(id='search', name='search', type='text', placeholder='Search').form-control
 				span.input-group-btn
-					button(type='submit').btn.btn-default
+					button#searchButton.btn.btn-success
 						span(aria-hidden='true').glyphicon.glyphicon-search
-		p= 'Open Auctions: ' + totalOpen + '/ Archived Auctions: ' + totalAuctions
-	if !auctions
-		.container
-			:markdown
-				## What is BidHistory
+				span.input-group-btn
+					button(onclick='$(\'#advanced-search\').toggle();return false').btn.btn-info
+						span(area-hidden='true').glyphicon.glyphicon-list
+			span Open Auctions:
+			span#open-auctions 
+			span &nbsp;&nbsp;Archived Auctions:
+			span#closed-auctions
+			#advanced-search.row
+				hr
+				.col-md-6
+					.input-group
+						fieldset
+							legend Auction Sites
+							label
+								input(type='checkbox', name='sites', value='cbid')
+								span &nbsp;CigarBid
+							br
+							label
+								input(type='checkbox', name='sites', value='cigarauctioneer')
+								span &nbsp;Cigar Auctioneer
+							br
+							label
+								input(type='checkbox', name='sites', value='cigarmonster') 
+								span &nbsp;Cigar Monster
+							br
+				.col-md-6
+					.input-group
+						fieldset
+							legend Auction Types
+							label
+								input(type='checkbox', name='types', value='single')
+								span &nbsp;Singles
+							br
+							label
+								input(type='checkbox', name='types', value='5-pack')
+								span &nbsp;5-pack
+							br
+							label
+								input(type='checkbox', name='types', value='10-pack')
+								span &nbsp;10-pack
+							br
+							label
+								input(type='checkbox', name='types', value='box')
+								span &nbsp;Box
+							br
+							label
+								input(type='checkbox', name='types', value='sampler')
+								span &nbsp;Sampler
+	#bid-history-help
+		:markdown
+			## What is BidHistory
 
-				BidHistory is a tool designed to provide some statistics and temporal information 
-				about Cigar auctions across various auction sites.  As BidHistory is early in it's 
-				development, it is not feature complete and may change over time.  We welcome any 
-				input from our users and feel free to file bug reports or feature requests on the 
-				[GitHub Page](http://github/.com/stevemcgrath/bidhistory).
+			BidHistory is a tool designed to provide some statistics and temporal information 
+			about Cigar auctions across various auction sites.  As BidHistory is early in it's 
+			development, it is not feature complete and may change over time.  We welcome any 
+			input from our users and feel free to file bug reports or feature requests on the 
+			[GitHub Page](http://github/.com/stevemcgrath/bidhistory).
 
-				## How to use the auction search
+			## How to use the auction search
 
-				As the new Node.js version is significantly different, this will all need to be rewritten...
-	else
-		.container
-			#analytics.container
-				.panel.panel-primary
+			As the new Node.js version is significantly different, this will all need to be rewritten...
+	#bid-history-analytics
+		#price-tiles.row
+			.container.col-lg-4
+				.panel.tile.avg
 					.panel-heading
-						h3.panel-title Price Analysis
+						h3.panel-title Average Price
 					.panel-body
-						ul.list-group
-							li.list-group-item Best Price per Stick
-								span.badge= stats.best
-							li.list-group-item.active Average Price per Stick
-								span.badge= stats.average
-							li.list-group-item Worst Price per Stick
-								span.badge= stats.worst
-							li.list-group-item Standard Deviation
-								span.badge= stats.stdDev
-						ul.list-group
-							li.list-group-item Great Price Range
-								span.badge= stats.great + ' - ' + stats.good
-							li.list-group-item Good Price Range
-								span.badge= stats.good + ' - ' + stats.average
-							li.list-group-item Poor Price Range
-								span.badge= stats.average + ' - ' + stats.poor
-							li.list-group-item Bad Price Range
-								span.badge= stats.poor + ' - ' + stats.bad
-			#trends.container
-				.panel.panel-primary
+						#avg-price.price.big-price
+			.container.col-lg-4
+				.panel.tile.best
 					.panel-heading
-						h3.panel-title Price Distribution
+						h3.panel-title Best Price
 					.panel-body
-						#price-distribution.container
-				.panel.panel-primary
+						#best-price.price.big-price
+			.container.col-lg-4
+				.panel.tile.worst
 					.panel-heading
-						h3.panel-title Price History
+						h3.panel-title Worst Price
 					.panel-body
-						#price-trend.container
-			#current-auctions.container
-				.panel.panel-primary
+						#worst-price.price.big-price
+		#price-adv.row
+
+		#price-ranges.row
+			.container.col-lg-3
+				.panel.great.tile
 					.panel-heading
-						h3.panel-title Current Auctions
-							button(data-toggle='collapse', data-target='#open-auctions-view').btn.btn-info.btn-xs.pull-right
-					#open-auctions-view.panel-body
-						table#open-auctions-table.table.table-striped
-							thead
-								td Title
-								td Category
-								td
-								td Time Left
-							tbody
-								each auction in openAuctions
-									tr(onclick='location.href="' + auction.link + '"')
-										td= auction.name
-										td= auction.type
-											small= '/' + auction.quantity
-										td
-											img(src='/static/img/' + auction.site + '.png')
-										td= auction.closeTime
-			#auction-history.container
-				.panel.panel-primary
+						h3.panel-title Great Price Range
+					.panel-body
+						#great-price-range.price
+			.container.col-lg-3
+				.panel.good.tile
 					.panel-heading
-						h3.panel-title Auction History
-					#auction-history-view.panel-body
-						table#auction-history-table.table.table-striped
-							thead
-								td Title
-								td Category
-								td
-								td Closed
-								td Price
-							tbody
-								each auction in closedAuctions
-									tr(onclick='location.href="' + auction.link + '"')
-										td= auction.name
-										td= auction.type
-										td
-											img(src='/static/img/' + auction.site + '.png')
-										td= auction.closeTime
-										td= auction.price
-											small= '/' + auction.pricePerStick
+						h3.panel-title Good Price Range
+					.panel-body
+						#good-price-range.price
+			.container.col-lg-3
+				.panel.poor.tile
+					.panel-heading
+						h3.panel-title Poor Price Range
+					.panel-body
+						#poor-price-range.price
+			.container.col-lg-3
+				.panel.bad.tile
+					.panel-heading
+						h3.panel-title Bad Price Range
+					.panel-body
+						#bad-price-range.price
+		#trends
+			.panel.panel-primary
+				.panel-heading
+					h3.panel-title Price Distribution
+				.panel-body
+					#price-distribution
+			.panel.panel-primary
+				.panel-heading
+					h3.panel-title Price History
+				.panel-body
+					#price-trend
+		#current-auctions
+			.panel.panel-primary
+				.panel-heading
+					h3.panel-title Current Auctions
+				#open-auctions-view.panel-body
+					table#open-auctions-table.table.table-striped
+						thead
+							td Title
+							td Type
+							td
+							td Time Left
+						tbody
+		#auction-history
+			.panel.panel-primary
+				.panel-heading
+					h3.panel-title Auction History
+				#auction-history-view.panel-body
+					table#auction-history-table.table.table-striped
+						thead
+							td Title
+							td Type
+							td
+							td Closed
+							td Price
+						tbody
