--- a/views/bidhistory.jade
+++ b/views/bidhistory.jade
@@ -137,7 +137,7 @@ block content
 							td Title
 							td Type
 							td
-							td Time Left
+							td Closes
 						tbody
 		#auction-history
 			.panel.panel-primary
