--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,5 +35,6 @@ html
 	script(src='/static/js/jquery.flot.time.min.js')
 	script(src='/static/js/jquery.flot.tooltip.min.js')
 	script(src='/static/js/jquery.serialize-object.min.js')
+	script(src='/static/js/moment.min.js')
 	script(src='/static/js/herfio.js')
 	block script
