Hover should work as expected now

--- a/views/bidhistory.jade
+++ b/views/bidhistory.jade
@@ -136,7 +136,7 @@ block content
 				.panel-heading
 					h3.panel-title Current Auctions
 				#open-auctions-view.panel-body
-					table#open-auctions-table.table.table-striped
+					table#open-auctions-table.table.table-striped.table-hover
 						thead
 							td Title
 							td Type
@@ -148,7 +148,7 @@ block content
 				.panel-heading
 					h3.panel-title Auction History
 				#auction-history-view.panel-body
-					table#auction-history-table.table.table-striped
+					table#auction-history-table.table.table-striped.table-hover
 						thead
 							td Title
 							td Type
