--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,5 +36,6 @@ html
 	script(src='/static/js/jquery.flot.tooltip.min.js')
 	script(src='/static/js/jquery.serialize-object.min.js')
 	script(src='/static/js/moment.min.js')
+	script(src='/static/js/clipboard.min.js')
 	script(src='/static/js/herfio.js')
 	block script
