Added appropriate class information to the copy button

--- a/views/bidhistory.jade
+++ b/views/bidhistory.jade
@@ -16,7 +16,7 @@ block content
 						span(area-hidden='true').glyphicon.glyphicon-question-sign
 				span.input-group-btn
 					input(id='get-search-link', type='hidden', name='link', value='')
-					button(data-clipboard-target='#get-search-link')
+					button(class='btn btn-info', data-clipboard-target='#get-search-link')
 						span(area-hidden='true').glyphicon.glyphicon-copy
 			span Open Auctions:
 			span#open-auctions 
