More clipboard action!

--- a/views/bidhistory.jade
+++ b/views/bidhistory.jade
@@ -15,7 +15,7 @@ block content
 					button(onclick='$(\'#bid-history-help\').toggle();return false').btn.btn-info
 						span(area-hidden='true').glyphicon.glyphicon-question-sign
 				span.input-group-btn
-					button(id='get-search-link', onclick='return false', class='btn btn-info', data-clipboard-text='')
+					button(id='get-search-link', class='btn btn-info', data-clipboard-text='')
 						span(area-hidden='true').glyphicon.glyphicon-copy
 			span Open Auctions:
 			span#open-auctions 
