Apparently I never added the Bootstrap JS code...

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,6 +35,7 @@ html
 	script(src='/static/js/jquery.flot.time.min.js')
 	script(src='/static/js/jquery.flot.tooltip.min.js')
 	script(src='/static/js/jquery.serialize-object.min.js')
+	script(src='/static/js/bootstrap.min.js')
 	script(src='/static/js/moment.min.js')
 	script(src='/static/js/clipboard.min.js')
 	script(src='/static/js/herfio.js')
