Tweaking the visual representations

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,6 +34,7 @@ html
     script(src='/static/js/jquery.flot.min.js')
     script(src='/static/js/jquery.flot.time.min.js')
     script(src='/static/js/jquery.flot.tooltip.min.js')
+    script(src='/static/js/jquery.flot.autoMarkings.js')
     script(src='/static/js/jquery.serialize-object.min.js')
     script(src='/static/js/bootstrap.min.js')
     script(src='/static/js/moment.min.js')
