Yay the site is mobile-friendly now...

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,13 +12,13 @@ block content
         codebase is under a lot of active development and we haven't decided on what
         should go here yet.
 
-        ### BidHistory
+        ### <a href="/bids">BidHistory</a>
 
         This is the auction tracking and analytics tool.  Currently tracking auctions
         from Cigarbid, Cigar Auctioneer, and Cigar Monster, we mine the auctions, price,
         type, etc. and then give you a simple and intuitive interface into that data.
 
-        ### HumiTrack
+        ### <a href="/humidors/list">HumiTrack</a>
 
         This is the humidor temperature and humidity tracker.  We rely on a small device
         (such as a Raspberry Pi) to report back the temperature and humidity of the humidor
