--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
     head
         title= title
+        meta(name="viewport", content="width=device-width; initial-scale=1.0; maximum-scale=1.0;")
         link(rel='stylesheet', href='/static/css/bootstrap.min.css')
         link(rel='stylesheet', href='/static/css/bootswatch.min.css')
         link(rel='stylesheet', href='/static/css/style.css')
