Removed the no-longer relevent help info

--- a/views/bidhistory.jade
+++ b/views/bidhistory.jade
@@ -76,19 +76,12 @@ block content
 
                     ## How to use the auction search
 
-                    Searching the BidHistory toolset is pretty easy, as its just a matter of typing in
+                    Searching the BidHistory tool-set is pretty easy, as its just a matter of typing in
                     the words that you would like to search against and clicking the 
                     <span class="glyphicon glyphicon-search"></span> button.  If you'd like to exclude 
                     a word from the search, just prepend the word with a dash (-) symbol to inform 
                     BidHistory that you would like to negate this word from the results.
-
-                    If you'd like a little more granularity, then click the <span class="glyphicon glyphicon-list"></span>
-                    button to expand the advanced search apabilities.  From here you can select what
-                    auction sites you would like us to search from and what types of auctions we should
-                    be searching for.  Multiple selections are possible as well.
-
-                    The <span class="glyphicon glyphicon-question-sign"></span> button will always toggle
-                    this help message.
+                    
     div(style='display: none')#bid-history-analytics
         #price-tiles.row
             .container.col-lg-4
