--- a/views/index.jade
+++ b/views/index.jade
@@ -4,12 +4,12 @@ block content
     :markdown
         Welcome to Herf.io!  Herf.io started out as the cigar auction tracking
         system known as bidhistory last year.  As usage of BidHistory grew we
-        had extended beyond the original codebase and have switched to a more
+        had extended beyond the original code-base and have switched to a more
         flexible system to not only handle bid tracking and analytics, but also
         lay the groundwork for a cloud-based humidor and humidity tracking tool.
 
-        We apologise for the fairly barren homepage at the moment, as the current
-        codebase is under a lot of active development and we haven't decided on what
+        We apologize for the fairly barren homepage at the moment, as the current
+        code-base is under a lot of active development and we haven't decided on what
         should go here yet.
 
         ### <a href="/bids">BidHistory</a>
